chore: using high-res local image everywhere now
